# dvclive

./: .cruft.json  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pylintrc  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  README.md  README.rst  dvc.yaml  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  codecov.yaml  release-drafter.yml
.github/workflows/: package.yaml  release.yml  tests.yaml  tests.yml  update-template.yaml
dvclive/: __init__.py  api.py  catalyst.py  dvc.py  env.py  error.py  fastai.py  huggingface.py  io.py  keras.py  lgbm.py  lightning.py  live.py  logger.py  metrics.py  mmcv.py  report.py  serialize.py  tensorboard.py  utils.py  version.py  xgb.py
dvclive/data/: __init__.py  base.py  image.py  image_numpy.py  image_pil.py  plot.py  scalar.py  utils.py
examples/: DVCLice-Evidently.ipynb  DVCLive-Evidently.ipynb  DVCLive-Fabric.ipynb  DVCLive-HuggingFace.ipynb  DVCLive-PyTorch-Lightning.ipynb  DVCLive-Quickstart.ipynb  DVCLive-YOLO.ipynb  DVCLive-scikit-learn.ipynb  DVCLive_HuggingFace.ipynb
scripts/: build_package.sh
src/dvclive/: __init__.py  _dvclive_version.py  catalyst.py  dvc.py  env.py  error.py  fabric.py  fastai.py  huggingface.py  keras.py  lgbm.py  lightning.py  live.py  monitor_system.py  optuna.py  report.py  serialize.py  studio.py  system_metrics.py  utils.py  version.py  vscode.py  xgb.py
src/dvclive/data/: __init__.py  base.py  metric.py  plot.py  scalar.py  sklearn.py  sklearn_plot.py
src/dvclive/plots/: __init__.py  annotations.py  base.py  bounding_boxes.py  custom.py  image.py  metric.py  sklearn.py  utils.py
tests/: conftest.py  test_catalyst.py  test_cleanup.py  test_context_manager.py  test_dvc.py  test_fastai.py  test_huggingface.py  test_keras.py  test_lgbm.py  test_lightning.py  test_log_artifact.py  test_log_metric.py  test_log_param.py  test_logging.py  test_main.py  test_make_dvcyaml.py  test_make_report.py  test_make_summary.py  test_mmcv.py  test_monitor_system.py  test_optuna.py  test_post_to_studio.py  test_report.py  test_resume.py  test_step.py  test_studio.py  test_system_metrics.py  test_tensorboard.py  test_utils.py  test_vscode.py  test_xgboost.py
tests/frameworks/: test_catalyst.py  test_fabric.py  test_fastai.py  test_huggingface.py  test_keras.py  test_lgbm.py  test_lightning.py  test_optuna.py  test_xgboost.py
tests/plots/: test_annotations.py  test_bounding_boxes.py  test_custom.py  test_image.py  test_metric.py  test_sklearn.py
tests/test_data/: test_image.py  test_plot.py  test_scalar.py
tests/test_frameworks/: test_catalyst.py  test_fastai.py  test_huggingface.py  test_keras.py  test_lgbm.py  test_lightning.py  test_optuna.py  test_xgboost.py
