[build-system]
requires = ["setuptools>=77", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
description = "Experiments logger for ML projects."
name = "dvclive"
readme = "README.md"
keywords = [
  "ai",
  "metrics",
  "collaboration",
  "data-science",
  "data-version-control",
  "developer-tools",
  "git",
  "machine-learning",
  "reproducibility"
]
license = "Apache-2.0"
license-files = ["LICENSE"]
maintainers = [{name = "Iterative", email = "support@dvc.org"}]
authors = [{name = "Iterative", email = "support@dvc.org"}]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
dynamic = ["version"]
dependencies = [
  "dvc>=3.48.4",
  "dvc-render>=1.0.0,<2",
  "dvc-studio-client>=0.20,<1",
  "funcy",
  "gto",
  "ruamel.yaml",
  "scmrepo>=3,<4",
  "psutil",
  "pynvml"
]

[project.optional-dependencies]
image = ["numpy", "pillow"]
sklearn = ["scikit-learn>=1.5.0"]
plots = ["scikit-learn", "pandas", "numpy"]
markdown = ["matplotlib"]
tests = [
  "pytest>=7.2.0,<9.0",
  "pytest-sugar>=0.9.6,<2.0",
  "pytest-cov>=3.0.0,<7.0",
  "pytest-mock>=3.8.2,<4.0",
  "dvclive[image,plots,markdown]",
  "ipython",
  "pytest_voluptuous",
  "dpath",
  "transformers[torch]",
  "tf-keras"
]
dev = [
  "dvclive[all,tests]",
  "mypy==1.17.1",
  "types-PyYAML"
]
mmcv = ["mmcv"]
tf = ["tensorflow"]
xgb = ["xgboost"]
lgbm = ["lightgbm"]
huggingface = ["transformers", "datasets"]
fastai = ["fastai"]
lightning = ["lightning>=2.0", "torch", "jsonargparse[signatures]>=4.26.1"]
optuna = ["optuna"]
all = [
  "dvclive[image,mmcv,tf,xgb,lgbm,huggingface,fastai,lightning,optuna,plots,markdown]"
]

[project.urls]
Homepage = "https://github.com/iterative/dvclive"
Documentation = "https://dvc.org/doc/dvclive"
Repository = "https://github.com/iterative/dvclive"
Changelog = "https://github.com/iterative/dvclive/releases"
Issues = "https://github.com/iterative/dvclive/issues"

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
where = ["src"]
namespaces = false

[tool.setuptools_scm]
write_to = "src/dvclive/_dvclive_version.py"

[tool.pytest.ini_options]
addopts = "-ra"
markers = """
    vscode: mark a test that verifies behavior that VS Code relies on
    studio: mark a test that verifies behavior that Studio relies on
"""

[tool.coverage.run]
branch = true
source = ["dvclive", "tests"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "if typing.TYPE_CHECKING:",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "raise AssertionError",
  "@overload"
]

[tool.mypy]
# Error output
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true
pretty = true
check_untyped_defs = false
# Warnings
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
ignore_missing_imports = true
files = ["src", "tests"]

[tool.codespell]
ignore-words-list = "fpr"

[tool.ruff.lint]
ignore = ["N818", "UP006", "UP007", "UP035", "UP038", "B905", "PGH003", "SIM103", "PLC0415"]
select = ["F", "E", "W", "C90", "N", "UP", "YTT", "S", "BLE", "B", "A", "C4", "T10", "EXE", "ISC", "INP", "PIE", "T20", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "INT", "ARG", "PGH", "PL", "TRY", "NPY", "RUF"]

[tool.ruff.lint.per-file-ignores]
"noxfile.py" = ["D", "PTH"]
"tests/*" = ["S101", "INP001", "SLF001", "ARG001", "ARG002", "ARG005", "PLR2004", "NPY002"]

[tool.ruff.lint.pylint]
max-args = 10
