[metadata]
description = Metric logger for ML projects.
name = dvclive
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache-2.0
license_files = LICENSE
url = https://github.com/iterative/dvclive
project_urls =
    Documentation = https://dvc.org/doc/dvclive
    Source = https://github.com/iterative/dvclive
platforms=any
authors = Iterative
maintainer_email = support@dvc.org
keywords=data-science, metrics, machine-learning, developer-tools, ai
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Development Status :: 4 - Beta

[options]
python_requires = >=3.8
zip_safe = False
package_dir=
    =src
packages = find:
install_requires=
    dvc>2.45.1
    funcy>=1.14
    ruamel.yaml>=0.17.11

[options.extras_require]
image =
    numpy
    pillow
sklearn =
    scikit-learn
plots =
    %(sklearn)s
markdown =
    matplotlib
tests =
    pytest==7.2.0
    pytest-sugar==0.9.5
    pytest-cov==3.0.0
    pytest-mock==3.8.2
    pylint==2.15.0
    pylint-plugin-utils>=0.6
    mypy==0.981
    %(image)s
    %(plots)s
    %(markdown)s
    ipython
dev =
    %(tests)s
    %(all)s
mmcv =
    mmcv
tf =
    tensorflow
xgb =
    xgboost
lgbm =
    lightgbm
huggingface =
    transformers
    datasets
catalyst =
    catalyst>22
fastai =
    fastai
pytorch_lightning =
    pytorch_lightning>=1.9
    torch<1.13
all =
    %(image)s
    %(mmcv)s
    %(tf)s
    %(xgb)s
    %(lgbm)s
    %(huggingface)s
    %(catalyst)s
    %(fastai)s
    %(pytorch_lightning)s
    %(plots)s
    %(image)s
    %(plots)s
    %(markdown)s

[options.packages.find]
exclude =
    tests
    tests.*
where=src

[flake8]
ignore=
    # Whitespace before ':'
    E203
    # Too many leading '#' for block comment
    E266
    # Line break occurred before a binary operator
    W503
    # unindexed parameters in the str.format, see:
    # https://pypi.org/project/flake8-string-format/
    P1
max_line_length = 88
max-complexity = 15
select = B,C,E,F,W,T4,B902,T,P
show_source = true
count = true
