[metadata]
description = Metric logger for ML projects.
name = dvclive
long_description = file: README.md
long_description_content_type = text/x-rst
license = Apache-2.0
license_files = LICENSE
url = https://github.com/iterative/dvclive
project_urls =
    Documentation = https://dvc.org/doc/dvclive
    Source = https://github.com/iterative/dvclive
platforms=any
authors = Iterative
maintainer_email = support@dvc.org
keywords=data-science, metrics, machine-learning, developer-tools, ai
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Development Status :: 4 - Beta

[options]
python_requires = >=3.8
zip_safe = False
package_dir=
    =src
packages = find:
install_requires=
    dvc>2.45.1
    funcy
    ruamel.yaml
[options.extras_require]
image =
    numpy
    pillow
sklearn =
    scikit-learn
plots =
    %(sklearn)s
markdown =
    matplotlib
tests =
    pytest==7.2.0
    pytest-sugar==0.9.5
    pytest-cov==3.0.0
    pytest-mock==3.8.2
    %(image)s
    %(plots)s
    %(markdown)s
    ipython
dev =
    %(tests)s
    %(all)s
    mypy>=1.1.1
mmcv =
    mmcv
tf =
    tensorflow
xgb =
    xgboost
lgbm =
    lightgbm
huggingface =
    transformers
    datasets
catalyst =
    catalyst>22
fastai =
    fastai
pytorch_lightning =
    pytorch_lightning>=1.9
    torch<1.13
optuna =
    optuna
all =
    %(image)s
    %(mmcv)s
    %(tf)s
    %(xgb)s
    %(lgbm)s
    %(huggingface)s
    %(catalyst)s
    %(fastai)s
    %(pytorch_lightning)s
    %(optuna)s
    %(plots)s
    %(image)s
    %(plots)s
    %(markdown)s

[options.packages.find]
exclude =
    tests
    tests.*
where=src
